# Seroset

./: .gitignore  README.md
backend/: Cargo.toml  README.md
backend/.cargo/: config.toml
backend/prisma/: schema.prisma
backend/src/: lib.rs  main.rs  prisma.rs
backend/src/graphql/: mod.rs  schema.rs  types.rs
backend/src/graphql/mutation/: mod.rs  user.rs
backend/src/graphql/query/: mod.rs  user.rs
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/app/(components)/: name_input.tsx  share_input.tsx
frontend/src/app/share/: page.tsx
frontend/src/lib/: server.ts
