[package]
name = "backend"
version = "0.1.0"
edition = "2021"
default-run = "backend"

[workspace]
resolver = "2"

[dependencies]
axum = "0.6.16"

async-graphql = "6.0.11"
async-graphql-axum = "6.0.11"

prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.10" , default-features = false, features = ["postgresql"]}
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.10" , default-features = false, features = ["postgresql"]}

serde = "1.0.193"
tokio = "1.34.0"
